<resources>
    <string name="app_name">Schoters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jumlah_hasil_pencarian">jumlah hasil pencarian</string>
    <string name="welcome_to_schoter_news">Welcome to Schoter News</string>
    <string name="img">img</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="release_date">Release Date</string>
    <string name="news_link">News Link</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="please_enter_a_keyword">Please enter a keyword</string>
</resources>